tutorial/nohup.out
  File "manage.py", line 16
    ) from exc
         ^
SyntaxError: invalid syntax
Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
quickstart.Comment.created_at: (fields.W161) Fixed default value provided.
	HINT: It seems you set a fixed date / time / datetime value as default for this field. This may not be what you want. If you want to have the current date as default, use `django.utils.timezone.now`

System check identified 1 issue (0 silenced).
usage: manage.py runserver [-h] [--ipv6] [--nothreading] [--noreload]
                           [--nostatic] [--insecure] [--version]
                           [-v {0,1,2,3}] [--settings SETTINGS]
                           [--pythonpath PYTHONPATH] [--traceback]
                           [--no-color] [--force-color]
                           [addrport]
manage.py runserver: error: unrecognized arguments: db.sqlite3 f f.py kk.py manage.py menu_crawler.py new_crawl.py nohup.out pnew.py quickstart tutorial venv
Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
quickstart.Comment.created_at: (fields.W161) Fixed default value provided.
	HINT: It seems you set a fixed date / time / datetime value as default for this field. This may not be what you want. If you want to have the current date as default, use `django.utils.timezone.now`

System check identified 1 issue (0 silenced).
[31/Mar/2020 23:48:52] "GET / HTTP/1.1" 200 5821
[31/Mar/2020 23:48:52] "GET /static/rest_framework/css/bootstrap-tweaks.css HTTP/1.1" 304 0
[31/Mar/2020 23:48:52] "GET /static/rest_framework/css/bootstrap.min.css HTTP/1.1" 304 0
[31/Mar/2020 23:48:52] "GET /static/rest_framework/css/prettify.css HTTP/1.1" 304 0
[31/Mar/2020 23:48:52] "GET /static/rest_framework/js/jquery-3.3.1.min.js HTTP/1.1" 304 0
[31/Mar/2020 23:48:52] "GET /static/rest_framework/css/default.css HTTP/1.1" 304 0
[31/Mar/2020 23:48:52] "GET /static/rest_framework/js/ajax-form.js HTTP/1.1" 304 0
[31/Mar/2020 23:48:53] "GET /static/rest_framework/js/csrf.js HTTP/1.1" 304 0
[31/Mar/2020 23:48:53] "GET /static/rest_framework/js/bootstrap.min.js HTTP/1.1" 304 0
[31/Mar/2020 23:48:53] "GET /static/rest_framework/js/prettify-min.js HTTP/1.1" 304 0
[31/Mar/2020 23:48:53] "GET /static/rest_framework/js/default.js HTTP/1.1" 304 0
[31/Mar/2020 23:48:53] "GET /static/rest_framework/img/grid.png HTTP/1.1" 304 0
[31/Mar/2020 23:54:33] "GET /menus/?date=2020-03-31 HTTP/1.1" 200 13498
[31/Mar/2020 23:54:33] "GET /static/rest_framework/css/bootstrap-tweaks.css HTTP/1.1" 304 0
[31/Mar/2020 23:54:33] "GET /static/rest_framework/css/bootstrap.min.css HTTP/1.1" 304 0
[31/Mar/2020 23:54:33] "GET /static/rest_framework/css/prettify.css HTTP/1.1" 304 0
[31/Mar/2020 23:54:33] "GET /static/rest_framework/css/default.css HTTP/1.1" 304 0
[31/Mar/2020 23:54:33] "GET /static/rest_framework/js/jquery-3.3.1.min.js HTTP/1.1" 304 0
[31/Mar/2020 23:54:33] "GET /static/rest_framework/js/ajax-form.js HTTP/1.1" 304 0
[31/Mar/2020 23:54:33] "GET /static/rest_framework/js/bootstrap.min.js HTTP/1.1" 304 0
[31/Mar/2020 23:54:33] "GET /static/rest_framework/js/csrf.js HTTP/1.1" 304 0
[31/Mar/2020 23:54:33] "GET /static/rest_framework/js/prettify-min.js HTTP/1.1" 304 0
[31/Mar/2020 23:54:33] "GET /static/rest_framework/js/default.js HTTP/1.1" 304 0
[31/Mar/2020 23:54:33] "GET /static/rest_framework/img/grid.png HTTP/1.1" 304 0
/home/heka1024/.local/lib/python3.6/site-packages/rest_framework/pagination.py:198: UnorderedObjectListWarning: Pagination may yield inconsistent results with an unordered object_list: <class 'quickstart.models.Restaurant'> QuerySet.
  paginator = self.django_paginator_class(queryset, page_size)
[31/Mar/2020 23:55:30] "GET /menus/?date=2020-03-31 HTTP/1.1" 200 52
[31/Mar/2020 23:55:30] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:55:30] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:55:54] "GET /menus/?date=2020-03-31 HTTP/1.1" 200 52
[31/Mar/2020 23:55:54] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:55:54] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:55:55] "GET /menus/?date=2020-03-30 HTTP/1.1" 200 14818
[31/Mar/2020 23:57:32] "GET /menus/?date=2020-03-31 HTTP/1.1" 200 13498
[31/Mar/2020 23:58:18] "GET /menus/?date=2020-03-31 HTTP/1.1" 200 52
[31/Mar/2020 23:58:18] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:58:18] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:58:38] "GET /menus/?date=2020-03-31 HTTP/1.1" 200 52
[31/Mar/2020 23:58:38] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:58:38] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:58:40] "GET /menus/?date=2020-03-30 HTTP/1.1" 200 14818
[31/Mar/2020 23:59:09] "GET /menus/?date=2020-03-31 HTTP/1.1" 200 52
[31/Mar/2020 23:59:09] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:59:09] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:59:11] "GET /menus/?date=2020-03-31 HTTP/1.1" 200 52
[31/Mar/2020 23:59:11] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:59:11] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:59:17] "GET /menus/?date=2020-03-31 HTTP/1.1" 200 52
[31/Mar/2020 23:59:17] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:59:17] "GET /restaurants/ HTTP/1.1" 200 2525
[31/Mar/2020 23:59:22] "GET /menus/?date=2020-03-30 HTTP/1.1" 200 14818
[31/Mar/2020 23:59:28] "GET /comments/?id=19 HTTP/1.1" 200 52
[31/Mar/2020 23:59:28] "GET /menus/?date=2020-03-31 HTTP/1.1" 200 52
Watching for file changes with StatReloader
System check identified some issues:

WARNINGS:
quickstart.Comment.created_at: (fields.W161) Fixed default value provided.
	HINT: It seems you set a fixed date / time / datetime value as default for this field. This may not be what you want. If you want to have the current date as default, use `django.utils.timezone.now`

System check identified 1 issue (0 silenced).
/home/heka1024/.local/lib/python3.6/site-packages/rest_framework/pagination.py:198: UnorderedObjectListWarning: Pagination may yield inconsistent results with an unordered object_list: <class 'quickstart.models.Restaurant'> QuerySet.
  paginator = self.django_paginator_class(queryset, page_size)
[01/Apr/2020 22:08:40] "GET /menus/?date=2020-04-01 HTTP/1.1" 200 52
[01/Apr/2020 22:08:40] "GET /restaurants/ HTTP/1.1" 200 2525
[01/Apr/2020 22:08:40] "GET /restaurants/ HTTP/1.1" 200 2525
  File "manage.py", line 16
    ) from exc
         ^
SyntaxError: invalid syntax
[01/Apr/2020 22:15:39] "GET / HTTP/1.1" 200 5821
[01/Apr/2020 22:15:39] "GET /static/rest_framework/css/bootstrap-tweaks.css HTTP/1.1" 200 3385
[01/Apr/2020 22:15:39] "GET /static/rest_framework/css/bootstrap.min.css HTTP/1.1" 200 121457
[01/Apr/2020 22:15:39] "GET /static/rest_framework/css/prettify.css HTTP/1.1" 200 817
[01/Apr/2020 22:15:39] "GET /static/rest_framework/js/jquery-3.3.1.min.js HTTP/1.1" 200 86927
[01/Apr/2020 22:15:39] "GET /static/rest_framework/css/default.css HTTP/1.1" 200 1131
[01/Apr/2020 22:15:39] "GET /static/rest_framework/js/ajax-form.js HTTP/1.1" 200 3597
[01/Apr/2020 22:15:39] "GET /static/rest_framework/js/csrf.js HTTP/1.1" 200 1719
[01/Apr/2020 22:15:39] "GET /static/rest_framework/js/bootstrap.min.js HTTP/1.1" 200 37608
[01/Apr/2020 22:15:39] "GET /static/rest_framework/js/prettify-min.js HTTP/1.1" 200 13632
[01/Apr/2020 22:15:39] "GET /static/rest_framework/js/default.js HTTP/1.1" 200 1268
[01/Apr/2020 22:15:40] "GET /static/rest_framework/img/grid.png HTTP/1.1" 200 1458
Not Found: /favicon.ico
[01/Apr/2020 22:15:40] "GET /favicon.ico HTTP/1.1" 404 7245
[01/Apr/2020 22:15:42] "GET /comments/ HTTP/1.1" 200 12800
[01/Apr/2020 22:15:44] "GET / HTTP/1.1" 200 5821
[01/Apr/2020 22:15:45] "GET /restaurants/ HTTP/1.1" 200 17209
[01/Apr/2020 22:16:34] "GET /menus/?date=2020-04-01 HTTP/1.1" 200 14831
[01/Apr/2020 22:16:34] "GET /restaurants/ HTTP/1.1" 200 2525
[01/Apr/2020 22:16:34] "GET /restaurants/ HTTP/1.1" 200 2525
[01/Apr/2020 22:16:44] "GET /restaurants/ HTTP/1.1" 200 2525
[01/Apr/2020 22:16:44] "GET /restaurants/ HTTP/1.1" 200 2525
[01/Apr/2020 22:16:44] "GET /menus/?date=2020-04-01 HTTP/1.1" 200 14831
[01/Apr/2020 22:18:10] "GET /restaurants/ HTTP/1.1" 200 2525
[01/Apr/2020 22:18:10] "GET /menus/?date=2020-04-01 HTTP/1.1" 200 14831
[01/Apr/2020 22:18:10] "GET /restaurants/ HTTP/1.1" 200 2525
[01/Apr/2020 22:20:50] "GET /restaurants/ HTTP/1.1" 200 2525
[01/Apr/2020 22:20:50] "GET /menus/?date=2020-04-01 HTTP/1.1" 200 14831
[01/Apr/2020 22:20:50] "GET /restaurants/ HTTP/1.1" 200 2525
[01/Apr/2020 22:23:41] "GET /restaurants/ HTTP/1.1" 200 2525
[01/Apr/2020 22:23:41] "GET /menus/?date=2020-04-01 HTTP/1.1" 200 14831
[01/Apr/2020 22:23:41] "GET /restaurants/ HTTP/1.1" 200 2525
[01/Apr/2020 22:23:44] "GET /menus/?date=2020-04-02 HTTP/1.1" 200 52
Performing system checks...

April 01, 2020 - 22:06:07
Django version 2.2.6, using settings 'tutorial.settings'
Starting development server at http://0:8000/
Quit the server with CONTROL-C.
